Выполнены настройки игнорирования

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-.idea
-env
-*.egg-info
-dist
-build
-**__pycache__
+.idea/
+
+env/
+*.egg-info/
+dist/
+build/
+
+__pycache__/
+
+*.sqlite3
+media/
+migrations/
