Исправлена ошибка: Нельзя игнорировать каталог migrations

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
+# PtCharm
 .idea/
 
+# Virtualenv
 env/
 *.egg-info/
 dist/
 build/
 
-
+# Python
 __pycache__/
 
+# Django
 *.sqlite3
 media/
-migrations/
+**/migrations/*
+!**/migrations/__init__.py
